--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Redemption
+email: info@redemptionbc.org
+description: It’s all about Jesus. Redemption is Bible-based church led by Pastor Ryan Huguley in Arlington Heights, Illinois.
+baseurl: ""
+url: "http://redemptionbc.github.io"
+twitter_username: redemptionbc
+github_username: redemptionbc
 
 # Build settings
 markdown: kramdown
